--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 vaadin.launch-browser=true
 spring.application.name=jkits
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/jkits
+spring.datasource.login=december
+spring.datasource.password=123456
