--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
 	<properties>
 		<java.version>21</java.version>
 		<vaadin.version>24.4.12</vaadin.version>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -70,6 +72,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.12.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.17.2</version>
 		</dependency>
     </dependencies>
 	<dependencyManagement>
@@ -117,26 +124,28 @@
 				</dependency>
 
 			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>com.vaadin</groupId>
-						<artifactId>vaadin-maven-plugin</artifactId>
-						<version>${vaadin.version}</version>
-						<executions>
-							<execution>
-								<id>frontend</id>
-								<phase>compile</phase>
-								<goals>
-									<goal>prepare-frontend</goal>
-									<goal>build-frontend</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+			<!--
+                        <build>
+                            <plugins>
+                                <plugin>
+                                    <groupId>com.vaadin</groupId>
+                                    <artifactId>vaadin-maven-plugin</artifactId>
+                                    <version>${vaadin.version}</version>
+                                    <executions>
+                                        <execution>
+                                            <id>frontend</id>
+                                            <phase>compile</phase>
+                                            <goals>
+                                                <goal>prepare-frontend</goal>
+                                                <goal>build-frontend</goal>
+                                            </goals>
+                                        </execution>
+                                    </executions>
+                                </plugin>
+                            </plugins>
+                        </build>
+                        -->
+                    </profile>
+                </profiles>
 
-</project>
+            </project>
