--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.application.name=jkits
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/jkits
-spring.datasource.login=december
-spring.datasource.password=123456
+#spring.datasource.login=december
+#spring.datasource.password=19771209
+spring.datasource.login=postgres
+spring.datasource.password=592M52d40
